--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Public Pantry</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
