fixed status bug, markers now render on submit

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>ublic pantry</title>
+    <title>public pantry</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="../client/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 
